@@ -98,9 +98,6 @@ class BrassPositionList : public PositionList {
     /// Have we started iterating yet?
     bool have_started;
 
-    /// Advance to next term position.
-    void next_internal();
-
     /// Copying is not allowed.
     BrassPositionList(const BrassPositionList &);
 
