@@ -91,9 +91,6 @@ class ChertPositionList : public PositionList {
     /// Have we started iterating yet?
     bool have_started;
 
-    /// Advance to next term position.
-    void next_internal();
-
     /// Copying is not allowed.
     ChertPositionList(const ChertPositionList &);
 
